fix:(Properties):joekraemer: fix properties
+ fix properties

--- a/HttpServer/mkdocs/site/index.html
+++ b/HttpServer/mkdocs/site/index.html
@@ -131,7 +131,7 @@ Plusieurs points nous ont été demandés et voici une liste de nos choix ainsi 
 <li>Les ressources sont compréssées en GZIP.</li>
 </ul>
 <h2 id="auteurs">Auteurs</h2>
-<p>Ce projet a été réalisé par les étudiants KRAEMER Joé et DUPONT Félix.
+<p>Ce projet a été réalisé par les étudiants KRAEMER Joé, DUPONT Félix et HAMED Aichetou.
 Le projet a été encadré par notre professeur J. Bertrand.</p>
 <h2 id="licence">Licence</h2>
 <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="License: CC BY-NC-ND 4.0" src="https://img.shields.io/badge/License-CC%20BY--NC--ND%204.0-lightgrey.svg" /></a></p>
